--- a/index.html
+++ b/index.html
@@ -14,26 +14,26 @@
         <section>
             <!---blog-->
         </section>
-        <h2>News Blog</h2>
+        <h2>News Blog Headlines</h2>
+        <hr/>
         <!---parent Div-->
         <div>
 
             <!---specific blog-->
-            <h4>Headline Today</h4>
             <p>11 Vihiga County Officials Arrested Over Loss Of Ksh.17M Meant For Blood Transfusion Centre</p>
             <img src="https://citizentv.obs.af-south-1.myhuaweicloud.com/117523/conversions/EACC-og_image.webp" width="20%" target>
-            <a href="https://www.citizen.digital/news/11-vihiga-county-officials-arrested-over-loss-of-ksh17m-meant-for-blood-transfusion-centre-n343898"> Read more</a>
-            <p>Author: Nicholas liech </p><span>Published Date 04.07,2024</span>
-            
+            <a href="https://www.citizen.digital/news/11-vihiga-county-officials-arrested-over-loss-of-ksh17m-meant-for-blood-transfusion-centre-n343898"> <br>Read more</a>
+        
         </div>
 
 
         </section>
-        <hr/>
         <h4>Headline Today</h4>
             <img src="kutuny-og_image.webp" width="20%">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex dolorem mollitia illo minus.</p>
-            <a href="https://www.citizen.digital/news/11-vihiga-county-officials-arrested-over-loss-of-ksh17m-meant-for-blood-transfusion-centre-n343898"> Read more</a>
+            <p>Click Here for more info<a href="https://www.citizen.digital/news/11-vihiga-county-officials-arrested-over-loss-of-ksh17m-meant-for-blood-transfusion-centre-n343898" target="_blank" rel="no opener"> Read more</a></p>
+            <p>Author: Nicholas liech </p><span>Published Date 04.07,2024</span>
+
 
     </section>
 </body>
